<resources>
    <string name="app_name">MyBottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dashboard">Selamat datang di halaman Dashboard</string>
    <string name="home">Selamat datang di halaman Home</string>
    <string name="poster">Poster</string>
    <string name="title">Title:</string>
    <string name="release">Release:</string>
    <string name="director">Director:</string>
    <string name="cast">Cast:</string>
    <string name="overview">Overview:</string>
    <string name="textview">TextView</string>


</resources>
